# BootCamp-Vivo-Python-AI

./: README.md
API/: READM.md  README.md  requirements.txt
API/alembic/versions/: 2297e74c6147_init_db.py
API/workout_api/: main.py  routers.py
API/workout_api/atleta/: controller.py  models.py  schemas.py
API/workout_api/categorias/: __init__.py  controller.py  models.py  schemas.py
API/workout_api/centro_treinamento/: __init__.py
API/workout_api/configs/: settings.py
API/workout_api/contrib/: __init__.py  models.py  schemas.py
API/workout_api/contrib/repository/: __init__.py
API_Desafio/: Makefile  README.md  pyproject.toml  requirements.txt
API_Desafio/store/: routers.py
API_Desafio/store/db/: README.md
Banco de Dados/: main.py
Banco de Dados Relacionais/: main.py
Banco de Dados Relacionais/service/: README.md  __init__.py  sqlite_functions.py
Banco de Dados Relacionais/service/backup/: meu_banco.db
Banco de Dados Relacionais/service/db/: meu_banco.db
Banco de Dados/service/: README.md  sqlite_functions.py
Banco de Dados/service/backup/: viagens.db
Banco de Dados/service/db/: viagens.db
Desafio - Criando um Sistema Bancário com Python/: main.py  main_v1.py  main_v2.py  main_v3.py
Desafio - Criando um Sistema Bancário com Python/service/: __init__.py  banco_services.py
POO Python/Explorando POO com Python/: main_001.py  main_002.py  main_003.py
