[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Baku-Stark <wysthellyjessemata13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
motor = "^3.4.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
