[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Baku-Stark <wysthellyjessemata13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi= "^0.111.0"
uvicorn= "^0.30.1"
python = "^3.12"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
motor = "^3.4.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
